--- a/ipa.plist
+++ b/ipa.plist
@@ -10,7 +10,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>https://shadowsocks-help.github.io/ios/TikTok 21.1.0.ipa</string>
+                        <string>https://114.215.253.144/opt/mypkg/TikTok-21.1.0.ipa</string>
                     </dict>
                 </array>
                 <key>metadata</key>
