--- a/ipa.plist
+++ b/ipa.plist
@@ -16,7 +16,7 @@
                 <key>metadata</key>
                 <dict>
                     <key>bundle-identifier</key>
-                     <string>com.liguangming.Shadowrocket</string>
+                     <string>com.zhiliaoapp.musically</string>
                      <key>bundle-version</key>
                     <string>21.1.0</string>
                     <key>kind</key>
