--- a/ipa.plist
+++ b/ipa.plist
@@ -22,7 +22,7 @@
                     <key>kind</key>
                     <string>software</string>
                     <key>title</key>
-                    <string>Shadowrocket</string>
+                    <string>TikTok</string>
                 </dict>
             </dict>
         </array>
